Final Bug fixes
Removed horizontal scroll from mobile view

--- a/assets/styles/ReachUs.css
+++ b/assets/styles/ReachUs.css
@@ -1,67 +1,270 @@
-body{
-    background-color:#1a1a1a;
-    font-family: lato, sans-serif;
-    font-weight: bold;
+.polygon.cut {
+  width: 470px;
+  height: 280px;
+  background: #1a1a1a;
+  clip-path: polygon(0 0, 100% 0%, 80% 100%, 0% 100%);
 }
 
-.polygon{
-    width:460px;height:280px;
-    background:#1a1a1a;
-    clip-path:polygon(0 0,100% 0,80% 100%,0 100%);
+/* .reach {
+  max-height: 150px;
+  height: 100%;
+  font-size: 9rem;
+  font-weight: 700;
+  overflow: hidden;
+  line-height: 9rem;
+  margin-left: 36px;
+  color: #6ecdfa;
+}*/
+
+.team.us {
+  margin-left: 45rem;
 }
 
-.reach{
-    max-height:150px;
-    height:100%;
-    font-size:9rem;
-    font-weight:700;
-    overflow:hidden;
-    line-height:9rem;
-    margin-left:36px;
-    color:#6ECDFA;
+/* .polygon.greet {
+  margin-left: -119px;
+  line-height: 0.01rem;
+} */
+
+/* .container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl {
+  padding-top: 50px;
+} */
+
+.icon.ion-ios-email-outline.mail,
+.icon.ion-ios-location-outline.pin,
+.la.la-phone-square.phone {
+  font-size: 4.5rem;
+  color: #fff;
+}
+.la-phone-square {
+  margin-left: 0.52;
+}
+.ion-ios-location-outline {
+  margin-left: 2.6;
+}
+.ion-ios-email-outline {
+  margin-left: 0px;
+}
+.reach-us-content {
+  margin-left: 13vw;
+  margin-top: 16.38vh;
+}
+.col.location {
+  text-align: center;
+  display: flex;
+  margin-left: 7.81vw;
+}
+.phno .text-content {
+  margin-top: 1.98vh;
+}
+.address .text-content {
+  margin-top: 2.48vh;
+}
+.phno,
+.address,
+.mail {
+  margin-top: 1.98vh;
+}
+.text-content {
+  color: #6ecdfa;
+
+  margin-left: 1.56vw;
+  line-height: 2rem;
+  font-size: 2rem;
 }
 
-.us{
-    font-size:3.5rem;
-    white-space:nowrap;
-    color:#D4F0FC;
-    margin-left:339px;
+.mail .text-content {
+  position: relative;
+  margin-top: 2.5rem;
 }
 
-.polygon.greet{
-    margin-left:-119px;
-    line-height:0.01rem;
+.col.tele {
+  text-align: center;
+  display: flex;
+  margin-left: 5.2vw;
 }
 
-.container,.container-lg,.container-md,.container-sm,.container-xl{
-    padding-top:50px;
+.col.email {
+  text-align: center;
+  display: flex;
+  margin-left: 2.6vw;
 }
 
-.icon.ion-ios-email-outline.mail,.icon.ion-ios-location-outline.pin,.la.la-phone-square.phone{
-    font-size:3.5rem;
-    color:#fff;
+.reach-out {
+  line-height: 3.57vh;
 }
 
-.col.location{
-    text-align:center;
-    display:flex;
-    margin-left:150px;
+.us {
+  position: relative;
+  right: 11rem;
 }
 
-.address{
-    color:#6ECDFA;
-    padding:25px;
-    margin-left:30px;
+@media (max-width: 600px) {
+  .team-us {
+    font-size: 2.5rem;
+    margin-left: 300px;
+    margin-top: -20px;
+  }
+  .text-content {
+    font-size: 1rem;
+  }
+  .icon.ion-ios-email-outline.mail,
+  .icon.ion-ios-location-outline.pin,
+  .la.la-phone-square.phone {
+    font-size: 2rem;
+    color: #fff;
+  }
+  .icon.ion-ios-email-outline.mail {
+    margin-top: -5px;
+    margin-left: -3px;
+  }
+  .la.la-phone-square.phone {
+    margin-top: 12px;
+    margin-left: -5px;
+  }
+  .icon.ion-ios-location-outline.pin {
+    margin-top: 10px;
+    position: relative;
+  }
+  .reacher {
+    margin-top: -100px;
+  }
+  .reach-us-content {
+    margin-top: 300px;
+    margin-left: -100px;
+    border: 1px solid #6ecdfa;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+    width: 600px;
+    padding-left: 30px;
+    text-align: right;
+  }
+  .phno {
+    margin-top: -20px;
+  }
+  .mail {
+    margin-top: -5px;
+  }
+  .team.us {
+    margin-left: 20rem;
+  }
 }
 
-.col.tele{
-    text-align:center;
-    display:flex
-    ;margin-left:100px;
+@media (min-width: 600px) and (max-width: 768px) {
+  .team-us {
+    font-size: 2.5rem;
+    margin-left: 300px;
+  }
+  .text-content {
+    font-size: 1rem;
+  }
+  .icon.ion-ios-email-outline.mail,
+  .icon.ion-ios-location-outline.pin,
+  .la.la-phone-square.phone {
+    font-size: 2.5rem;
+    color: #fff;
+  }
+  .la.la-phone-square.phone {
+    font-size: 2.5rem;
+    color: #fff;
+  }
+  .icon.ion-ios-email-outline.mail {
+    margin-top: -12px;
+  }
+  .la.la-phone-square.phone {
+    margin-top: 12px;
+  }
+  .icon.ion-ios-location-outline.pin {
+    margin-top: 5px;
+  }
+  .reacher {
+    margin-top: -100px;
+  }
+  .team.us {
+    margin-left: 20rem;
+  }
 }
 
-.col.email{
-    text-align:center;
-    display:flex;
-    margin-left:50px;
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 992px) {
+  .phno,
+  .address,
+  .mail {
+    margin-top: 0.5vh;
+  }
+  .icon.ion-ios-email-outline.mail,
+  .icon.ion-ios-location-outline.pin,
+  .la.la-phone-square.phone {
+    font-size: 2.5rem;
+    color: i#fff;
+    margin-top: -8rem;
+  }
+  .team.us {
+    margin-left: 20rem;
+  }
 }
+
+/*Large devices (desktop and laptop)*/
+@media (min-width: 992px) and (max-width: 1300px) {
+  .phno,
+  .address,
+  .mail {
+    margin-top: 0.5vh;
+  }
+  .icon.ion-ios-email-outline.mail,
+  .icon.ion-ios-location-outline.pin,
+  .la.la-phone-square.phone {
+    font-size: 3.5rem;
+    color: #fff;
+  }
+  .phno .text-content {
+    margin-top: 1vh;
+  }
+  .mail .text-content {
+    margin-top: 1.7vh;
+  }
+  .address .text-content {
+    margin-top: 1vh;
+  }
+  .reach-us-content {
+    margin-left: 13vw;
+    margin-top: 17.38vh;
+  }
+  .text-content {
+    color: #6ecdfa;
+    margin-left: 1.56vw;
+    line-height: 2rem;
+    font-size: 1.5rem;
+  }
+  .team.us {
+    margin-left: 25rem;
+  }
+}
+
+@media (min-width: 1300px) and (max-width: 1367px) {
+  .team.us {
+    margin-left: 45rem;
+  }
+}
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1367px) {
+  .ion-ios-email-outline {
+    margin-top: 0px;
+  }
+  .reach-us-content {
+    margin-top: 21.38vh;
+  }
+  .team.us {
+    margin-left: 45rem;
+  }
+}
+/* Added By KevinMathewTh */
+/* Added By KevinMathewTh */
+/* Added By KevinMathewTh */
+/* Added By KevinMathewTh */
+/* Added By KevinMathewTh */
+/* Added By KevinMathewTh */
+/* Added By KevinMathewTh */
